--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
+:root {
+	--primary-color: #047AED;
+}
+
 
 * {
   box-sizing: border-box;
@@ -34,8 +38,9 @@ img {
 	width: 100%;
 }
 
+/* Navbar */
 .navbar {
-	background-color: #047AED;
+	background-color: var(--primary-color);
 	color: #FFF;
 	height:  70px;
 }
@@ -58,7 +63,71 @@ img {
 	border-bottom: 2px #FFF solid;
 }
 
+/* Showcase */
+.showcase {
+	height: 400px;
+	background-color: var(--primary-color);
+	color: #FFF;
+	position: relative;
+}
 
+.showcase h1 {
+	font-size: 40px;
+}
+
+.showcase p {
+	margin: 20px 0;
+} 
+
+.showcase .grid {
+	overflow: visible;
+	grid-template-columns: 55% 45%;
+	gap: 30px;
+}
+
+.showcase-form {
+	position: relative;
+	top: 60px;
+	height: 350px;
+	width: 400px;
+	padding: 40px;
+	 z-index: 100;
+}
+
+.showcase-form .form-control {
+	margin: 30px 0;
+}
+
+.showcase-form input[type='text'],
+.showcase-form input[type='email'] {
+	border: 0;
+	border-bottom: 1px solid #b4becb;
+	width: 100%;
+	padding: 3px;
+	font-size: 16px; 
+}
+
+.showcase-form input:focus {
+	outline: none;
+}
+
+.showcase::before, .showcase::after {
+	content: "";
+	position: absolute;
+	height: 100px;
+	bottom: -70px;
+	right: 0;
+	left: 0;
+	background: #FFF;
+	transform: skewY(-3deg);
+	-webkit-transform: skewY(-3deg);
+	-moz-transform: skewY(-3deg);
+	-ms-transform: skewY(-3deg);
+}
+
+/* Stats */
+
+/* Utilities */
 .container {
 	max-width:  1100px;
 	overflow: auto;
@@ -66,8 +135,46 @@ img {
 	padding: 0 40px;
 }
 
+.card {
+	background-color: #fff;
+	color: #333;
+	border-radius: 10px;
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+	padding: 20px;
+	margin: 10px;
+}
+
+.btn {
+	display: inline-block;
+	padding: 10px 30px;
+	cursor: pointer;
+	background-color: var(--primary-color);
+	color: #FFF;
+	border: none;
+	border-radius: 5px;
+}
+
+.btn-outline {
+	background-color:  transparent;
+	border: 1px solid white;
+}
+
+.btn:hover {
+	transform: scale(0.98);
+
+}
+
 .flex {
 	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 20px;
 	justify-content: center;
 	align-items: center;
 	height: 100%;
